--- a/ProcMem/ProcMem.csproj
+++ b/ProcMem/ProcMem.csproj
@@ -43,15 +43,18 @@
     <Compile Include="IProcess.cs" />
     <Compile Include="Marshaling\MarshalCache.cs" />
     <Compile Include="Marshaling\MarshalType.cs" />
-    <Compile Include="MemoryAccessType.cs" />
     <Compile Include="Memory\IMemory.cs" />
     <Compile Include="Memory\IPointer.cs" />
+    <Compile Include="Memory\MemoryAccessType.cs" />
     <Compile Include="Memory\MemoryObject.cs" />
     <Compile Include="Memory\MemoryPointer.cs" />
     <Compile Include="Memory\MemoryRegion.cs" />
+    <Compile Include="Memory\MemorySnapshot.cs" />
     <Compile Include="Memory\ProcessMemory.cs" />
     <Compile Include="Memory\ProcessMemoryLocal.cs" />
     <Compile Include="Memory\ProcessMemoryRemote.cs" />
+    <Compile Include="Modules\IProcessModule.cs" />
+    <Compile Include="Modules\ModuleRemote.cs" />
     <Compile Include="Native\Kernel32.cs" />
     <Compile Include="Native\Kernel32Enums.cs" />
     <Compile Include="Native\Kernel32Structs.cs" />
@@ -59,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\MemoryHelper.cs" />
     <Compile Include="Utilities\ParseHelper.cs" />
+    <Compile Include="Utilities\SignatureScanner.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
