--- a/ProcMem/ProcMem.csproj
+++ b/ProcMem/ProcMem.csproj
@@ -59,10 +59,18 @@
     <Compile Include="Native\Kernel32Enums.cs" />
     <Compile Include="Native\Kernel32Structs.cs" />
     <Compile Include="Native\Msvcrt.cs" />
+    <Compile Include="Native\User32.cs" />
+    <Compile Include="Native\User32Enums.cs" />
+    <Compile Include="Native\User32Structs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\MemoryHelper.cs" />
     <Compile Include="Utilities\ParseHelper.cs" />
     <Compile Include="Utilities\SignatureScanner.cs" />
+    <Compile Include="Windows\Keyboard\IKeyboard.cs" />
+    <Compile Include="Windows\Keyboard\Keyboard.cs" />
+    <Compile Include="Windows\Keyboard\KeyboardExtensions.cs" />
+    <Compile Include="Windows\Keyboard\KeyboardHook.cs" />
+    <Compile Include="Windows\Keyboard\KeyboardKey.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
